# slack-bot

./: .gitignore  .prettierignore  Next.js Slack App.js  README.md  Slack App Setup Guide.md  package-lock.json  package.json
.devcontainer/: devcontainer.json
javascript/src/: index.js
python/: app.py  pyproject.toml
slack-bot/: package-lock.json  package.json
slack-bot/src/app/api/slack/: commands.ts  interactions.ts
slack-bot/src/app/slack/: events.ts  page.tsx
slack-bot/src/lib/slack/: client.ts  handler.ts  utils.ts
src/: index.js
