[project]
name = "slack-bot-thecollectivemind"
version = "0.1.0"
description = ""
authors = [
    {name = "poppysmickarlili",email = "karlili.li@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "slack-bolt (>=1.22.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
